--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 					</tr>
 					<tr>
 						<td>GitHub</td>
-						<td><a href=""></a></td>
+						<td><a href="https://github.com/f-cremon">f-cremon</a></td>
 					</tr>
 				</table>
 			</div>
