--- a/cv.html
+++ b/cv.html
@@ -23,11 +23,13 @@
 			<h1 class="page-header">Curriculum</h1>
 			<div class="focus-content">
 				Qui verrà inserito il CV.<br>
-				Per riceverne una copia ora, contattami <a href="./contact.html">tramite mail</a>.
+				Per riceverne una copia ora, <a href="./contact.html">contattami</a>.
 			</div>
 		</main>
 		<footer> <!-- footer; since pages are short, just a "to top" or "to home" link and some sort of signature -->
 			<a href="./home.html">Torna alla home</a>
+			-
+			<a href="https://github.com/f-cremon/portfolio">Vai al repository</a>
 			<div id="signature">Realizzato da Francesco Cremon</div>
 		</footer>
 	</body>
