--- a/globe.html
+++ b/globe.html
@@ -57,6 +57,8 @@
 		</main>
 		<footer> <!-- footer; since pages are short, just a "to top" or "to home" link and some sort of signature -->
 			<a href="./home.html">Torna alla home</a>
+			-
+			<a href="https://github.com/f-cremon/portfolio">Vai al repository</a>
 			<div id="signature">Realizzato da Francesco Cremon</div>
 		</footer>
 	</body>
