--- a/hobby.html
+++ b/hobby.html
@@ -35,8 +35,9 @@
 			</div>
 		</main>
 		<footer> <!-- footer; since pages are short, just a "to top" or "to home" link and some sort of signature -->
-			<!-- TODO: this link stretches along the entire width of the page....... -->
 			<a href="./home.html">Torna alla home</a>
+			-
+			<a href="https://github.com/f-cremon/portfolio">Vai al repository</a>
 			<div id="signature">Realizzato da Francesco Cremon</div>
 		</footer>
 	</body>
